# OpenGL-Playground

./: .clang-format  CMakeLists.txt  README.md  exec.sh
include/: shader.h
include/glad/: glad.h
shaders/: shader.fs  shader.vs
src/: glad.c  shader.cpp  test.cpp
